Update env example with VENICE_API_KEY

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
 # VectorVision Environment Variables
-# Copy this to .env.local and fill in your API key
+# Set these in Railway dashboard
 
+# Required: Your Venice AI API key
 VENICE_API_KEY=your_venice_api_key_here
