--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # VectorVision Environment Variables
 # Set these in Railway dashboard
 
-# Required: Your Venice AI API key
-VENICE_API_KEY=your_venice_api_key_here
+# Required: Your Venice AI Inference Key
+VENICE_INFERENCE_KEY=your_venice_inference_key_here
