Add Vectorizer.ai integration for SVG vectorization

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,9 @@
 # VectorVision Environment Variables
 # Set these in Railway dashboard
 
-# Required: Your Venice AI Inference Key
+# Venice AI for image generation
 VENICE_INFERENCE_KEY=your_venice_inference_key_here
+
+# Vectorizer.ai for vectorization (get free at https://vectorizer.ai/api)
+VECTORIZER_API_ID=your_vectorizer_api_id
+VECTORIZER_API_SECRET=your_vectorizer_api_secret
