--- a/package.json
+++ b/package.json
@@ -1,1 +1,1 @@
-{"name":"vectorvision","version":"1.0.0","private":true,"scripts":{"dev":"next dev","build":"next build","start":"next start"},"dependencies":{"next":"^14.2.35","react":"18.2.0","react-dom":"18.2.0"}}
+{"name":"vectorvision","version":"1.0.0","private":true,"scripts":{"dev":"next dev","build":"next build","start":"next start"},"dependencies":{"form-data":"^4.0.5","next":"^14.2.35","react":"18.2.0","react-dom":"18.2.0"}}
