--- a/package.json
+++ b/package.json
@@ -1,1 +1,1 @@
-{"name":"vectorvision","version":"1.0.0","private":true,"scripts":{"dev":"next dev","build":"next build","start":"next start"},"dependencies":{"imagetracerjs":"^1.2.6","next":"^14.2.35","react":"18.2.0","react-dom":"18.2.0"}}
+{"name":"vectorvision","version":"1.0.0","private":true,"scripts":{"dev":"next dev","build":"next build","start":"next start"},"dependencies":{"imagetracerjs":"^1.2.6","next":"^14.2.35","potrace":"^2.1.8","react":"18.2.0","react-dom":"18.2.0"}}
